Fix image display on mobile.

--- a/input/assets/css/main.css
+++ b/input/assets/css/main.css
@@ -378,3 +378,7 @@ table, td, th {
     border-width: 1px;
     border-style: solid;
 }
+
+.post img {
+    max-width: 100%;
+}
